Fix hero heading line break on mobile

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -72,6 +72,7 @@ html{scroll-behavior: smooth;}
 }
 
 .mobile-show-inline {
+  display: inline;
   @include mphone {
     display: inline;
   }
@@ -87,7 +88,6 @@ html{scroll-behavior: smooth;}
   @include ldesktop {
     display: none;
   }
-display: inline;
 }
 
 // !VA Hide on all mobile devices including tablet
@@ -266,6 +266,7 @@ span.no-wrap {
   }
   @include lphone {
     aspect-ratio: 7.25 / 3; // mobile default: 4 cols x 3 rows feel
+    max-width: 414px;
   }
   @include tablet {
     --hero-cols: 6;
@@ -281,7 +282,7 @@ span.no-wrap {
   @include ldesktop {
     --hero-cols: 6;
     --hero-rows: 2;
-    aspect-ratio: 8/2; // matches your old desktop proportion more closely
+    aspect-ratio: 9/2; // matches your old desktop proportion more closely
   }
 }
 
@@ -340,10 +341,6 @@ span.no-wrap {
   text-align: center;
 }
 
-
-
-
-
 .hero-title-container {
   display: flex;
   flex-direction: column;
@@ -369,6 +366,9 @@ span.no-wrap {
   color: var(--c-hero-text);
   text-align: center;
   opacity: .9;
+  @include mphone {
+
+  }
   @include ldesktop {
     opacity: .8;
   }
@@ -559,13 +559,20 @@ span.no-wrap {
 .home.page {
   padding: 0;
   margin: 0;
+  @include lphone {
+    max-width: 414px;
+    margin: 0 auto;
+  }
   @include tablet {
-    margin: 24px auto 32px;
-    padding: 12px 20px;
+    margin: 18px auto 28px;
+    padding: 16px 24px;
+    max-width: 768px;
   }
   @include desktop {
     margin: 24px auto 32px;
-    padding: 12px 20px;
+    margin: 32px auto 48px;
+    padding: 24px 40px;
+    max-width: 960px;
   }
   @include ldesktop {
     margin: 48px auto 64px;
@@ -600,6 +607,11 @@ span.no-wrap {
   text-align: center;
   @include mphone {
     font-size: var(--font-size-xl);
+    .no-wrap {
+      .whitespace: nowrap;
+    }
+  }
+  @include lphone {
   
   }
   @include ldesktop {
